CommentEntity, CommentRepository created. Table "comment" created. CommentRepositoryTest created